change day details from table to div

--- a/demo/styles/demo.css
+++ b/demo/styles/demo.css
@@ -23,3 +23,9 @@ html{
     max-width: 600px;
     margin: 0 auto;
 }
+@media(max-width:640px){
+    .calender_container{
+        max-width: auto;
+        margin: 0 15px;
+    }
+}
